[package]
name = "beejlander"
version = "0.1.0"
authors = ["Gavin Markee <gavinmarkee@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["macros"] }
reqwest = "0.10.4"
regex = "1.3.7"
